--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.11]
+        python-version: [3.11.3]
 
     steps:
     - uses: actions/checkout@v3
@@ -23,7 +23,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
-        pip install -r ../FRB_Attendance_Monitoring/win_requirements.txt
+        cd FRB_Attendance_Monitoring
+        pip install -r win_requirements.txt
     - name: Run Tests
       run: |
         python manage.py test
