--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Install Dependencies
       run: |
         cd FRB_Attendance_Monitoring
-        
         pip install -r win_requirements.txt
     - name: Run Tests
       run: |
+        cd FRB_Attendance_Monitoring
         python manage.py test
