--- a/FRB_Attendance_Monitoring/.gitignore
+++ b/FRB_Attendance_Monitoring/.gitignore
@@ -1,7 +1,11 @@
 # Created by https://www.gitignore.io
 ## virtualenv
 venv/
-
+FRB_Attendance_Monitoring/__pycache__
+staff/__pycache__/
+students/__pycache__/
+accounts/__pycache__/
+accounts/migrations/
 ### OSX ###
 .DS_Store
 .AppleDouble
